--- a/index.html
+++ b/index.html
@@ -34,24 +34,18 @@
             </li>
         </ul>
         <div id="social-links">
-            <a href="#" target="_blank">
-                <ion-icon name="logo-github"></ion-icon>
-            </a>
 
-            <a href="#" target="_blank">
+            <a href="https://www.instagram.com/concurseiro.eficaz_?igsh=eWplcTg0b3p0cWdj" target="_blank">
                 <ion-icon name="logo-instagram"></ion-icon>
             </a>
 
-            <a href="#" target="_blank">
+            <a href="https://www.tiktok.com/@concurseiro.eficaz?_r=1&_t=ZS-91OjJVW7zKX" target="_blank">
                 <ion-icon name="logo-tiktok"></ion-icon>
             </a>
 
-            <a href="#" target="_blank">
-                <ion-icon name="logo-linkedin"></ion-icon>
-            </a>
         </div>
         <footer>
-            Obrigado por esolher!
+            Obrigado por escolher!
         </footer>
     </div>
     <script type="module" src="https://unpkg.com/ioncons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
